--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,13 @@
 	    <artifactId>avro-tools</artifactId>
 	    <version>1.8.1</version>
 	</dependency>
+	
+	<dependency>
+	    <groupId>org.apache.thrift</groupId>
+	    <artifactId>libthrift</artifactId>
+	    <version>0.10.0</version>
+	</dependency>
+	
     
   </dependencies>
 </project>
