--- a/pom.xml
+++ b/pom.xml
@@ -42,5 +42,29 @@
 	</dependency>
 	
     
+    <!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-compiler-plugin -->
+	<dependency>
+	    <groupId>org.apache.maven.plugins</groupId>
+	    <artifactId>maven-compiler-plugin</artifactId>
+	    <version>3.1</version>
+	</dependency>
+    
   </dependencies>
+
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.1</version>
+				<configuration>
+					<source>1.7</source> <!-- 源代码使用的开发版本 -->
+					<target>1.7</target> <!-- 需要生成的目标class文件的编译版本 -->
+				</configuration>
+			</plugin>
+
+		</plugins>
+
+	</build>
+  
 </project>
